force-app/main/default/objects/nepa_legal_structure__c.object
<CustomObject>
    <description>CEQ Standard Entity 9: Legal Structure. Stores statutory and regulatory citations that govern NEPA reviews, CE determinations, and permit decisions. Used as a reference library linking processes and decision elements to their legal authority. Supports MFR #4 (Access to Screening Criteria) by making decision criteria traceable to authoritative legal sources.</description>
    <fields>
        <fullName>nepa_citation__c</fullName>
        <description>Official CFR or USC citation for this legal authority (e.g., 40 CFR 1501.3, 42 U.S.C. 4332).</description>
        <inlineHelpText>Official CFR or USC citation (e.g., 40 CFR 1501.3).</inlineHelpText>
        <label>Citation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_description__c</fullName>
        <description>Summary of this legal provision and its relevance to NEPA review or permitting decisions.</description>
        <inlineHelpText>Summary of this provision and its NEPA relevance.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_text_content__c</fullName>
        <description>Full text or relevant excerpt of the statutory or regulatory provision.</description>
        <inlineHelpText>Full text or excerpt of the provision.</inlineHelpText>
        <label>Text Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_issuing_authority__c</fullName>
        <description>Government body that issued or administers this legal authority (e.g., CEQ, EPA, USDA).</description>
        <inlineHelpText>Government body responsible for this authority (e.g., CEQ, EPA).</inlineHelpText>
        <label>Issuing Authority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_effective_date__c</fullName>
        <description>Date this legal provision became effective.</description>
        <inlineHelpText>Effective date of this provision.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nepa_compliance_requirements__c</fullName>
        <description>Procedural mandates or compliance requirements imposed by this legal authority on NEPA review processes.</description>
        <inlineHelpText>Procedural mandates and compliance requirements for this provision.</inlineHelpText>
        <label>Compliance Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When false, this legal structure record is not shown in active decision element lookups.</description>
        <inlineHelpText>Uncheck to retire this citation from active use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>NEPA Legal Structure</label>
    <nameField>
        <label>Legal Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NEPA Legal Structures</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>