force-app/main/default/objects/nepa_legal_structure__c/fields/nepa_record_owner_agency__c.field-meta.xml
<CustomField>
    <fullName>nepa_record_owner_agency__c</fullName>
    <description>CEQ standard v1.2 provenance: agency responsible for maintaining this record.</description>
    <label>Record Owner Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>